# bite_selection_package

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  load_checkpoint.sh  package.xml  preprocess_spdatset.sh  run_labelImg.sh  run_qt_sampler.sh  run_skewering_position_sampler.sh  run_view_samples.sh  setup.py  setup_labelImg.sh  spanet_train.sh  spnet_train.sh
config/: config.py  food_detector_config.py  predefined_classes_foods.txt  predefined_classes_foods_c7.txt  predefined_classes_foods_general.txt  spactionnet_config.py  spanet_config.py  spnet_config.py  spnetplus_config.py
data/: bounding_boxes_general  bounding_boxes_spanet  bounding_boxes_spnet_all  food_ann_test.txt  food_ann_test_small.txt  food_ann_train.txt  food_ann_train_small.txt  food_label_map.pbtxt  identity_to_success_rate_map.json  load_data.sh  skewering_positions_general  skewering_positions_spanet  skewering_positions_spnet_all
examples/: spnet_tutorial.py
logs/: clean_up.py  load_logs.sh
model/: spactionnet.py  spactionnet_dataset.py  spactionnet_loss.py  spanet.py  spanet_dataset.py  spanet_loss.py  spdataset.py  spnet.py  spnet_dataset.py  spnet_loss.py  spnetloss.py  spnetplus.py  spnetplus_dataset.py  spnetplus_loss.py
scripts/: cleanup.py  enhance_images.py  generate_cropped_images.py  identity_map.json  preprocess_cropped_images.py  qt_sampler.py  qt_sampler_main_axis.py  skewering_position_sampler.py  spactionnet_test.py  spactionnet_train.py  spanet_count.py  spanet_success.py  spanet_test.py  spanet_train.py  spnet_test.py  spnet_train.py  spnetplus_test.py  (+3 more)
(+13429 files in other folders)
